--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="./assets/css/styles.min.css">
     </head>
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom"><div class="container"><a class="navbar-brand text-capitalize" href="./index.html">Yashashchandra Kollu</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarResponsive"><ul class="navbar-nav ms-auto"><li class="nav-item"></li><li class="nav-item"></li></ul><ul class="navbar-nav"><li class="nav-item"><a class="nav-link active" href="#">Home</a></li><li class="nav-item"><a class="nav-link active" href="#about">About</a></li><li class="nav-item"></li></ul><ul class="navbar-nav"><li class="nav-item"></li><li class="nav-item"><a class="nav-link active" href="#work">Work</a></li><li class="nav-item"><a class="nav-link active" href="#connect">Connect</a></li></ul></div></div></nav><header class="text-center text-white masthead" id="header"><div class="masthead-content"><div class="container"><h1 class="display-1 text-center masthead-heading mb-0">Yashashchandra Kollu</h1><!-- Start: Bio --><h6 class="display-6 masthead-content mb-0">Programmer | Developer | Curious Enthusiast</h6><!-- End: Bio --><!-- Start: Social --><br>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom"><div class="container"><a class="navbar-brand text-capitalize" href="">Yashashchandra Kollu</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarResponsive"><ul class="navbar-nav ms-auto"><li class="nav-item"></li><li class="nav-item"></li></ul><ul class="navbar-nav"><li class="nav-item"><a class="nav-link active" href="#">Home</a></li><li class="nav-item"><a class="nav-link active" href="#about">About</a></li><li class="nav-item"></li></ul><ul class="navbar-nav"><li class="nav-item"></li><li class="nav-item"><a class="nav-link active" href="#work">Work</a></li><li class="nav-item"><a class="nav-link active" href="#connect">Connect</a></li></ul></div></div></nav><header class="text-center text-white masthead" id="header"><div class="masthead-content"><div class="container"><h1 class="display-1 text-center masthead-heading mb-0">Yashashchandra Kollu</h1><!-- Start: Bio --><h6 class="display-6 masthead-content mb-0"><q>You are What You Think!</q></h6><!-- End: Bio --><!-- Start: Social --><br>
 <div class="btn-group">
-    <a class="nav-link" href="https://www.linkedin.com/in/yashashchandrakollu-aa56bb172" target="_blank" rel="nofollow noopener noreferrer" title="Linkedin Profile - Yashashchandra Kollu">
+    <a class="nav-link" href="https://www.linkedin.com/in/yashashchandra-kollu" target="_blank" rel="nofollow noopener noreferrer" title="Linkedin Profile - Yashashchandra Kollu">
         <i class="btn fab fa-linkedin" style="font-size: 70px;"></i>
     </a>
     <a class="nav-link" href="https://github.com/yashash7" target="_blank" rel="nofollow noopener noreferrer" title="GitHub Profile - @yashash7">
@@ -30,7 +30,7 @@
 </div>
 <br>
 <!-- End: Social -->
-<a class="btn btn-primary btn-primary btn-xl rounded-pill mt-5" role="button" id="learnmore" href="#about">Learn More</a>
+<a class="btn btn-primary btn-primary btn-xl rounded-pill mt-5" role="button" id="learnmore" href="#about">Know More</a>
 </div>
 </div>
 <div class="bg-circle-1 bg-circle">
@@ -60,7 +60,7 @@
                 <div class="p-5">
                     <h2 class="display-4">About Me</h2>
                     <p>
-                        <strong>I am a Python Programmer, Web Development,&nbsp; and Cybersecurity enthusiast, and a curious person always wanted to explore new things.</strong>
+                        <strong>I am a Programmer, Developer, Web Development,&nbsp; and Cybersecurity enthusiast, and a curious person who always wanted to explore new things.</strong>
                     </p>
                 </div>
             </div>
@@ -79,7 +79,7 @@
             <div class="p-5">
                 <h2 class="display-4">Programming &amp; Dev</h2>
                 <p><br>
-                    <strong>I started learning how to code when I was 18 years old. Though it was quite late to start coding, I learnt how to code. Overtime, I've got a bit of programming/coding experience, and from then my curiosity to learn new things to step forward to learn many things like programming languages, various development tools, etc..</strong>
+                    <strong>I started learning how to code when I was 18 years old. Though it was quite late to start coding, I learnt how to code. Overtime, I've got a bit of programming/coding experience, and from then my curiosity is driving me forward to learn many things like programming, various development tools, soft skills, etc..</strong>
                     <br><br><br>
                 </p>
             </div>
@@ -97,7 +97,7 @@
         <div class="col-lg-6 order-lg-1">
             <div class="p-5">
                 <h2 class="display-4">Collaboration</h2>
-                <p><strong>I am a good team player and I love to work in teams (cause it's gonna have lot of fun working with teams rather than working individually) and I love collaborating with people.</strong><br>
+                <p><strong>I am a good team player and I love to work in teams (cause it's gonna have lot of fun and more productive working with teams rather than working individually) and I love collaborating with people.</strong><br>
                     <strong>Love to collaborate? Let's talk how awesome programming is! We can share our ideas and the best practices.</strong>
                     <br><br>
                 </p>
