Update Profile and references

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="nav-link" href="https://github.com/yashash7" target="_blank" rel="nofollow noopener noreferrer" title="GitHub Profile - @yashash7">
         <i class="btn fab fa-github" style="font-size: 70px;"></i>
     </a>
-    <a class="nav-link" href="https://blog.kyashashchandra.me" target="_blank" rel="nofollow noopener noreferrer" title="My Blog - The Curious Chandra Blog">
+    <a class="nav-link" href="https://tccblog.svarpy.in" target="_blank" rel="nofollow noopener noreferrer" title="My Blog - The Curious Chandra Blog">
         <i class="btn fab fa-blogger" style="font-size: 70px;"></i>
     </a>
     <!--<a class="nav-link" href="mailto:kolluyashashchandra@gmail.com" target="_blank" rel="nofollow noopener noreferrer" title="Send a Mail!">
@@ -60,7 +60,7 @@
                 <div class="p-5">
                     <h2 class="display-4">About Me</h2>
                     <p>
-                        <strong>I am a Programmer, Developer, Web Development,&nbsp; and Cybersecurity enthusiast, and a curious person who always wanted to explore new things.</strong>
+                        <strong>I am a Software Developer, a Travel Lover, and a Curious Enthusiast who always loves to explore new things.</strong>
                     </p>
                 </div>
             </div>
@@ -97,8 +97,8 @@
         <div class="col-lg-6 order-lg-1">
             <div class="p-5">
                 <h2 class="display-4">Collaboration</h2>
-                <p><strong>I am a good team player and I love to work in teams (cause it's gonna have lot of fun and more productive working with teams rather than working individually) and I love collaborating with people.</strong><br>
-                    <strong>Love to collaborate? Let's talk how awesome programming is! We can share our ideas and the best practices.</strong>
+                <p><strong>It feels great to collaborate with people, I am looking forward to work, travel, and exlplore with people. 
+                    Love to collaborate? Let's talk how awesome programming is! We can share our ideas or travel to the best destinations.</strong>
                     <br><br>
                 </p>
                 <div style="text-align:left;"> 
@@ -117,7 +117,7 @@
     </div>
     <br>
     <!-- End: top -->
-    <p class="text-center text-white m-0 small">Copyright&nbsp;© Yashashchandra Kollu 2021</p>
+    <p class="text-center text-white m-0 small">Yashashchandra Kollu 😎</p>
     </div>
 </footer>
 
