--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="p-5">
                     <h2 class="display-4">About Me</h2>
                     <p>
-                        <strong>I am a Software Developer, a Travel Lover, and a Curious Enthusiast who always loves to explore new things.</strong>
+                        <strong>I am a Software Application Developer, a Hodophile, and a Curious Enthusiast who always loves to explore new things.</strong>
                     </p>
                 </div>
             </div>
