--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <a class="nav-link" href="https://github.com/yashash7" target="_blank" rel="nofollow noopener noreferrer" title="GitHub Profile - @yashash7">
         <i class="btn fab fa-github" style="font-size: 70px;"></i>
     </a>
-    <a class="nav-link" href="https://tccblog.svarpy.in" target="_blank" rel="nofollow noopener noreferrer" title="My Blog - The Curious Chandra Blog">
+    <!--<a class="nav-link" href="" target="_blank" rel="nofollow noopener noreferrer" title="My Blog - The Curious Chandra Blog">
         <i class="btn fab fa-blogger" style="font-size: 70px;"></i>
-    </a>
+    </a> -->
     <!--<a class="nav-link" href="mailto:kolluyashashchandra@gmail.com" target="_blank" rel="nofollow noopener noreferrer" title="Send a Mail!">
         <i class="btn far fa-email" style="font-size: 70px;"></i>
     </a>-->
