--- a/index.html
+++ b/index.html
@@ -1,131 +1,179 @@
 <!DOCTYPE html>
 <html lang="en" manifest="cacher.appcache">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>Profile - Yashashchandra Kollu</title>
-        <meta property="og:type" content="webpage">
-        <meta name="description" content="Profile webpage of Yashashchandra Kollu.">
-        <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-        <link rel="stylesheet" href="./assets/css/styles.min.css">
-    </head>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Yashashchandra Kollu</title>
+    <meta property="og:type" content="webpage">
+    <meta name="description" content="Profile webpage of Yashashchandra Kollu.">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
+</head>
+
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom"><div class="container"><a class="navbar-brand text-capitalize" href="">Yashashchandra Kollu</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarResponsive"><ul class="navbar-nav ms-auto"><li class="nav-item"></li><li class="nav-item"></li></ul><ul class="navbar-nav"><li class="nav-item"><a class="nav-link active" href="#">Home</a></li><li class="nav-item"><a class="nav-link active" href="#about">About</a></li><li class="nav-item"></li></ul><ul class="navbar-nav"><li class="nav-item"></li><li class="nav-item"><a class="nav-link active" href="#work">Work</a></li><li class="nav-item"><a class="nav-link active" href="#connect">Connect</a></li></ul></div></div></nav><header class="text-center text-white masthead" id="header"><div class="masthead-content"><div class="container"><h1 class="display-1 text-center masthead-heading mb-0">Yashashchandra Kollu</h1><!-- Start: Bio --><h6 class="display-6 masthead-content mb-0">Application Developer</h6><!-- End: Bio --><!-- Start: Social --><br>
-<div class="btn-group">
-    <a class="nav-link" href="https://www.linkedin.com/in/yashashchandra-kollu" target="_blank" rel="nofollow noopener noreferrer" title="Linkedin Profile - Yashashchandra Kollu">
-        <i class="btn fab fa-linkedin" style="font-size: 70px;"></i>
-    </a>
-    <a class="nav-link" href="https://github.com/yashash7" target="_blank" rel="nofollow noopener noreferrer" title="GitHub Profile - @yashash7">
-        <i class="btn fab fa-github" style="font-size: 70px;"></i>
-    </a>
-    <!--<a class="nav-link" href="" target="_blank" rel="nofollow noopener noreferrer" title="My Blog - The Curious Chandra Blog">
-        <i class="btn fab fa-blogger" style="font-size: 70px;"></i>
-    </a> -->
-    <!--<a class="nav-link" href="mailto:kolluyashashchandra@gmail.com" target="_blank" rel="nofollow noopener noreferrer" title="Send a Mail!">
-        <i class="btn far fa-email" style="font-size: 70px;"></i>
-    </a>-->
-</div>
-<br>
-<!-- End: Social -->
-<a class="btn btn-primary btn-primary btn-xl rounded-pill mt-5" role="button" id="learnmore" href="#about">Know More</a>
-</div>
-</div>
-<div class="bg-circle-1 bg-circle">
-
-</div>
-<div class="bg-circle-4 bg-circle">
-
-</div>
-<div class="bg-circle-2 bg-circle">
-
-</div>
-<div class="bg-circle-3 bg-circle">
-
-</div>
-</header>
-<section>
-    <div class="container" id="about">
-        <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
-                <div class="p-5">
-                    <!-- Start: Profile Image -->
-                    <img class="img-fluid" src="./assets/img/profile.gif" />
-                    <!-- End: Profile Image -->
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
+        <div class="container">
+            <a class="navbar-brand text-capitalize" href="">👨🏻‍💻YcK</a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive">
+                <span class="visually-hidden">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
+                    <li class="nav-item"></li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link active" href="#work">Work</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#connect">Connect</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="text-center text-light masthead bg-dark" id="header">
+        <div class="masthead-content">
+            <div class="container">
+                <h1 class="display-1 text-center masthead-heading mb-0">Yashashchandra Kollu</h1>
+                <!-- Start: Bio -->
+                <!-- <h6 class="display-6 masthead-content mb-0">Application Developer</h6> -->
+                <!-- End: Bio --><!-- Start: Social -->
+                <div class="btn-group">
+                    <a class="nav-link" href="https://www.linkedin.com/in/yashashchandra-kollu" target="_blank"
+                        rel="nofollow noopener noreferrer" title="Linkedin Profile - Yashashchandra Kollu">
+                        <i class="btn fab fa-linkedin" style="color: white;font-size: 70px;"></i>
+                    </a>
+                    <a class="nav-link" href="https://github.com/yashash7" target="_blank"
+                        rel="nofollow noopener noreferrer" title="GitHub Profile - @yashash7">
+                        <i class="btn fab fa-github" style="color: white;font-size: 70px;"></i>
+                    </a>
+                    <!--<a class="nav-link" href="" target="_blank" rel="nofollow noopener noreferrer" title="My Blog - The Curious Chandra Blog">
+                <i class="btn fab fa-blogger" style="font-size: 70px;"></i>
+            </a> -->
+                    <!--<a class="nav-link" href="mailto:kolluyashashchandra@gmail.com" target="_blank" rel="nofollow noopener noreferrer" title="Send a Mail!">
+                <i class="btn far fa-email" style="font-size: 70px;"></i>
+            </a>-->
                 </div>
+                <br>
+                <!-- End: Social -->
+                <a class="btn btn-light btn-xl rounded-pill mt-5" role="button" id="learnmore" href="#about">Know
+                    More</a>
             </div>
-            <div class="col-lg-6 order-lg-1">
-                <div class="p-5">
-                    <h2 class="display-4">About Me</h2>
-                    <p>
-                        <strong>I am a Software Application Developer, a Hodophile, and a Curious Enthusiast who always loves to explore new things.</strong>
-                    </p>
+        </div>
+        <!-- <div class="bg-circle-1 bg-circle">
+
+        </div>
+        <div class="bg-circle-4 bg-circle">
+
+        </div>
+        <div class="bg-circle-2 bg-circle">
+
+        </div>
+        <div class="bg-circle-3 bg-circle">
+
+        </div> -->
+    </header>
+    <section class="bg-dark text-light">
+        <div class="container" id="about">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <!-- Start: Profile Image -->
+                        <img class="rounded-circle img-fluid" src="./assets/img/profile.gif" />
+                        <!-- End: Profile Image -->
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section>
-    <div class="container" id="work">
-        <div class="row align-items-center"
-        ><div class="col-lg-6 order-lg-1">
-            <div class="p-5">
-                <img class="rounded-circle img-fluid" src="./assets/img/code1.png">
-            </div>
-        </div>
-        <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
-                <h2 class="display-4">Programming &amp; Dev</h2>
-                <p><br>
-                    <strong>I started learning how to code when I was 18 years old. Though it was quite late to start coding, I learnt how to code. Overtime, I've got a bit of programming/coding experience, and from then my curiosity is driving me forward to learn many things like programming, various development tools, soft skills, etc..</strong>
-                    <br><br><br>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-</section>
-<section>
-    <div class="container" id="connect">
-        <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2"><div class="p-5">
-                <img class="rounded-circle img-fluid" src="./assets/img/colab1.png">
-            </div>
-        </div>
-        <div class="col-lg-6 order-lg-1">
-            <div class="p-5">
-                <h2 class="display-4">Collaboration</h2>
-                <p><strong>It feels great to collaborate with people, I am looking forward to work, travel, and exlplore with people. 
-                    Love to collaborate? Let's talk how awesome programming is! We can share our ideas or travel to the best destinations.</strong>
-                    <br><br>
-                </p>
-                <div style="text-align:left;"> 
-                    <a class="typeform-share button" href="https://form.typeform.com/to/LmGi7OJm?typeform-medium=embed-snippet" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#157347;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:16px;line-height:40px;text-align:center;margin:0;height:40px;padding:0px 26px;border-radius:5rem;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Connect with me! </a>
-                    <!--<button data-tf-popup="LmGi7OJm" data-tf-hide-headers data-tf-hide-footer style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#EE0979;color:#FFFFFF;font-size:16px;border-radius:5px;padding:0 26px;font-weight:bold;height:40px;cursor:pointer;line-height:40px;text-align:center;margin:0;text-decoration:none;">Connect with me!</button>-->
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">About Me</h2>
+                        <p>
+                            I am a Software Application Developer, a Hodophile, and a Curious Enthusiast who
+                            always loves to explore new things.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-</section>
-<footer class="py-5 bg-black">
-    <div class="container"><!-- Start: top -->
-        <div class="container" style="text-align: center;">
-        <a href="#" class="btn btn-warning btn-xl rounded-pill">Go to Top</a>
-    </div>
-    <br>
-    <!-- End: top -->
-    <p class="text-center text-white m-0 small">Yashashchandra Kollu 😎</p>
-    </div>
-</footer>
+    </section>
+    <section class="bg-dark text-light">
+        <div class="container" id="work">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <img class="rounded-circle img-fluid" src="./assets/img/code1.png">
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <h2 class="display-4">Programming &amp; Dev</h2>
+                        <p>
+                            I started learning how to code when I was 18 years old. Though it was quite late to
+                            start coding, I learnt how to code. Overtime, I've got a bit of programming/coding
+                            experience, and from then my curiosity is driving me forward to learn many things like
+                            programming, various development tools, soft skills, etc..
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-dark text-light">
+        <div class="container" id="connect">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <img class="rounded-circle img-fluid" src="./assets/img/colab1.png">
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Collaboration</h2>
+                        <p>
+                            It feels great to collaborate with people, I am looking forward to work, travel, and
+                            exlplore with people.<br>
+                            Love to collaborate? Let's talk how awesome programming is! We can share our ideas or
+                            travel to the best destinations.
+                        </p>
+                        <div style="text-align:left;">
+                            <a class="typeform-share button"
+                                href="https://form.typeform.com/to/LmGi7OJm?typeform-medium=embed-snippet"
+                                data-mode="popup"
+                                style="display:inline-block;text-decoration:none;background-color:#157347;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:16px;line-height:40px;text-align:center;margin:0;height:40px;padding:0px 26px;border-radius:5rem;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                                data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Connect
+                                with me! </a>
+                            <!--<button data-tf-popup="LmGi7OJm" data-tf-hide-headers data-tf-hide-footer style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#EE0979;color:#FFFFFF;font-size:16px;border-radius:5px;padding:0 26px;font-weight:bold;height:40px;cursor:pointer;line-height:40px;text-align:center;margin:0;text-decoration:none;">Connect with me!</button>-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="bg-dark">
+        <div class="container"><!-- Start: top -->
+            <div style="text-align: right;">
+                <a href="#" class="btn btn-warning btn-lg rounded-pill" style="font-size: 25px;">🔝</a>
+            </div>
+            <!-- End: top -->
+            <p class="text-center text-light m-0 small"> &copy; Yashashchandra Kollu</p>
+        </div>
+    </footer>
 
-<!-- Start: script for connect button -->
-<script src="//embed.typeform.com/next/embed.js"></script>
-<!--<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>-->
-<!-- End: script for connect button -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Start: script for connect button -->
+    <script src="//embed.typeform.com/next/embed.js"></script>
+    <!--<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>-->
+    <!-- End: script for connect button -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
